pages with template elements

--- a/index.html
+++ b/index.html
@@ -15,23 +15,25 @@
 <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&family=Open+Sans&family=Poppins&family=Raleway:wght@600&display=swap" rel="stylesheet">
 <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
     <title>Damian Roiz</title>
+
+<script type='text/javascript' src=js/templates.js></script>
     
 </head>
 
 
 <body>
 
-<!-- Main Menu------------------------------------------------->    
+<!-- Main Menu-------------------------------------------------> 
 
-<header>     
+<!-- <header>     
     <nav>
         <ul>
             <li class="logo">Damian Roiz</li>
-            <li class="items"><a href="#">Home</a></li>
-            <li class="items"><a href="#">About</a></li>
-            <li class="items"><a href="#">Services</a></li>
-            <li class="items"><a href="#">Blog</a></li>
-            <li class="items"><a href="#">Contact</a></li>
+            <li class="items"><a href="index.html">Home</a></li>
+            <li class="items"><a href="#about">About</a></li>
+            <li class="items"><a href="#services">Services</a></li>
+            <li class="items"><a href="blog.html">Blog</a></li>
+            <li class="items"><a href="contact.html">Contact</a></li>
             <li class="btn"><a href="#"><i class="fas fa-bars"></i></a></li>    
         </ul>
     </nav>
@@ -44,10 +46,12 @@
             });
         });
     </script>
-</header>   
+</header>  -->
 
+<my-menu></my-menu>
 
 <!--mission statement------------------------------------------>
+
    
     <main class="main-container" >
         <div class="box-1">
@@ -61,7 +65,7 @@
 
 <!--about section ------------------------------------------>
 
-<h2 class="section-title">About</h2>
+<h2 class="section-title" id="about">About</h2>
 
 <section class="about">
     <div class="about-container">
@@ -72,7 +76,7 @@
                 <h1>Hello,</h1> 
                 <h2>I'm Damian</h2>
                 <p>And I am on a mission to help people take control of their bodies through enjoyable and effective training protocols</p>
-                <button ><a href="#" class="hire-btn">Contact Me</a></button>
+                <button ><a href="#" class="hire-btn">Read more</a></button>
             </div>
         </div>
     </div>
@@ -80,21 +84,21 @@
 
 <!--Services ------------------------------------------>
 
-<h2 class="section-title">Services</h2>
+<h2 class="section-title" id="services">Services</h2>
 
 <div class="service-container">
     <div class="service-card">
         <div class="service-content">
             <h3 class="service-heading">Kettlebell Training</h3>
             <p class="service-body">Effective training programs to make you feel and look good about yourself</p>
-            <a href="#" class="service-button">Learn More</a>
+            <a href="#" class="service-button">See Programs</a>
         </div>
     </div>
     <div class="service-card">
         <div class="service-content">
             <h3 class="service-heading">Bodyweight Training</h3>
             <p class="service-body">Effective training programs to make you feel and look good about yourself</p>
-            <a href="#" class="service-button">Learn More</a>
+            <a href="#" class="service-button">See Programs</a>
         </div>
     </div>
     <div class="service-card">
@@ -108,51 +112,7 @@
 
 <!--footer ------------------------------------------>
 
-
-<footer>
-    <div class="main-content">
-        <div class="left box">
-            <h2>About</h2>
-            <div class="content">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam quam voluptatum quo porro ipsam non, corporis eos itaque praesentium expedita neque odit corrupti voluptatibus alias, provident eligendi ea beatae placeat.</p>
-
-            </div>
-        </div>
-        <div class="center box">
-            <h2>Follow Damian</h2>
-            <div class="content">
-                <div class="social">
-                    <a href="https://twitter.com/damianroiz" target="_blank"><span class="fab fa-twitter"></span></a>
-                    <a href="https://www.instagram.com/" target="_blank"><span class="fab fa-instagram"></span></a>
-                    <a href="#" target="_blank"><span class="fab fa-youtube"></span></a>
-                </div>
-            </div>
-        </div>
-        <div class="right box">
-            <h2>Join the Newsletter</h2>
-            <div class="content">
-                <form action="#">
-                    <div class="field-wrapper">
-                       <input id="fullname" type="text" name="fullname" placeholder="Enter your name" data-name="fullname" required=""> 
-                    </div>
-                    <div class="field-wrapper">
-                        <input id="email" type="email" name="email" placeholder="Enter your email" data-name="email" required="">    
-                    </div>
-                    <div class="btn">
-                        <button type="submit">Subscribe</button>
-                    </div>
-                </form>
-            </div>
-      
-        </div>
-    </div>
-    <div class="bottom">
-            <p>Created By<a href="https://www.linkedin.com/in/damianroiz/" target="_blank"> OnPoint Media</a> |
-                <span class='far fa-copyright'></span> 2020 All rights reserved.</p>  
-            <p><a href="damianroiz.com/terms-and-conditions" class='credit' target="_blank">Terms and Conditions</a><a href="damianroiz.com/privacy-policy" target="_blank">Privacy Policy</a></p>                
-    </div>
-</footer>
-
+<my-footer></my-footer>
 
 </body>
 
