--- a/index.html
+++ b/index.html
@@ -87,21 +87,21 @@
 <h2 class="section-title" id="services">Services</h2>
 
 <div class="service-container">
-    <div class="service-card">
+    <div class="service-card kettlebell">
         <div class="service-content">
             <h3 class="service-heading">Kettlebell Training</h3>
             <p class="service-body">Effective training programs to make you feel and look good about yourself</p>
             <a href="#" class="service-button">See Programs</a>
         </div>
     </div>
-    <div class="service-card">
+    <div class="service-card bodyweight">
         <div class="service-content">
             <h3 class="service-heading">Bodyweight Training</h3>
             <p class="service-body">Effective training programs to make you feel and look good about yourself</p>
             <a href="#" class="service-button">See Programs</a>
         </div>
     </div>
-    <div class="service-card">
+    <div class="service-card nutrition">
         <div class="service-content">
             <h3 class="service-heading">Nutritional Guides</h3>
             <p class="service-body">Effective training programs to make you feel and look good about yourself</p>
