--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="content">
                 <h1>Hello,</h1> 
                 <h2>I'm Damian</h2>
-                <p>And I am on a mission to help people take control of their bodies through enjoyable and effective training protocols</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga omnis cumque, autem eum accusantium, assumenda excepturi fugit, velit eius quis modi placeat pariatur mollitia temporibus. Atque nesciunt sapiente placeat a, cupiditate assumenda. Magni praesentium id sint exercitationem molestias dignissimos eveniet.</p>
                 <button ><a href="#" class="hire-btn">Read more</a></button>
             </div>
         </div>
@@ -85,21 +85,21 @@
 <h2 class="section-title" id="services">Services</h2>
 
 <div class="service-container">
-    <div class="service-card">
+    <div class="service-card kettlebell">
         <div class="service-content">
             <h3 class="service-heading">Kettlebell Training</h3>
             <p class="service-body">Effective training programs to make you feel and look good about yourself</p>
             <a href="#" class="service-button">See Programs</a>
         </div>
     </div>
-    <div class="service-card">
+    <div class="service-card bodyweight">
         <div class="service-content">
             <h3 class="service-heading">Bodyweight Training</h3>
             <p class="service-body">Effective training programs to make you feel and look good about yourself</p>
             <a href="#" class="service-button">See Programs</a>
         </div>
     </div>
-    <div class="service-card">
+    <div class="service-card nutrition">
         <div class="service-content">
             <h3 class="service-heading">Nutritional Guides</h3>
             <p class="service-body">Effective training programs to make you feel and look good about yourself</p>
