--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <li class="items"><a href="index.html">Home</a></li>
             <li class="items"><a href="index.html#about">About</a></li>
             <li class="items"><a href="index.html#services">Services</a></li>
-            <li class="items"><a href="/">Blog</a></li>
+            <li class="items"><a href="https://damianroiz-blog.netlify.app/">Blog</a></li>
             <li class="items"><a href="#newsletter">Newsletter</a></li>
             <li class="btn"><a href="#"><i class="fas fa-bars"></i></a></li>    
         </ul>
@@ -74,7 +74,7 @@
                 <h1>Hello,</h1> 
                 <h2>I'm Damian</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga omnis cumque, autem eum accusantium, assumenda excepturi fugit, velit eius quis modi placeat pariatur mollitia temporibus. Atque nesciunt sapiente placeat a, cupiditate assumenda. Magni praesentium id sint exercitationem molestias dignissimos eveniet.</p>
-                <button ><a href="#" class="hire-btn">Read more</a></button>
+                <button ><a href="#">Read more</a></button>
             </div>
         </div>
     </div>
@@ -83,31 +83,31 @@
 <!--Services ------------------------------------------>
 
 <h2 class="section-title" id="services">Services</h2>
-
+<section class="service-section">
 <div class="service-container">
     <div class="service-card kettlebell">
         <div class="service-content">
             <h3 class="service-heading">Kettlebell Training</h3>
             <p class="service-body">Effective training programs to make you feel and look good about yourself</p>
-            <a href="#" class="service-button">See Programs</a>
+            <a href="#" class="service-button">Sign Up</a>
         </div>
     </div>
     <div class="service-card bodyweight">
         <div class="service-content">
             <h3 class="service-heading">Bodyweight Training</h3>
             <p class="service-body">Effective training programs to make you feel and look good about yourself</p>
-            <a href="#" class="service-button">See Programs</a>
+            <a href="#" class="service-button">Sign Up</a>
         </div>
     </div>
     <div class="service-card nutrition">
         <div class="service-content">
             <h3 class="service-heading">Nutritional Guides</h3>
             <p class="service-body">Effective training programs to make you feel and look good about yourself</p>
-            <a href="#" class="service-button">See Programs</a>
+            <a href="#" class="service-button">Sign Up</a>
         </div>
     </div>
 </div>
-
+</section>
 <!--footer ------------------------------------------>
 
 <footer class="site-footer">
@@ -148,9 +148,9 @@
         </div>
     </div>
     <div class="bottom">
-            <p>Created By<a href="https://www.linkedin.com/in/damianroiz/" target="_blank"> OnPoint Media</a> |
+            <p>Created By<a href="https://damianroiz.github.io/" target="_blank"> Yours Truly</a> |
                 <span class='far fa-copyright'></span> 2020 All rights reserved.</p>  
-            <p><a href="damianroiz.com/terms-and-conditions" class='credit' target="_blank">Terms and Conditions</a><a href="damianroiz.com/privacy-policy" target="_blank">Privacy Policy</a></p>                
+            <p><a href="#" class='credit' target="_blank">Terms and Conditions</a><a href="#" target="_blank">Privacy Policy</a></p>                
     </div>
 </footer>
 
