--- a/index.html
+++ b/index.html
@@ -53,14 +53,9 @@
 <!--mission statement------------------------------------------>
 
    
-    <main class="main-container" >
-        <div class="box-1">
-        </div>    
-        <div class="box-2">
-            
-             
-        </div>
-    </main>
+    <div>
+        <p class="welcome">this is the main area</p>
+    </div>
 
 
 <!--about section ------------------------------------------>
