--- a/index.html
+++ b/index.html
@@ -51,14 +51,9 @@
 <!--mission statement------------------------------------------>
 
    
-    <main class="main-container" >
-        <div class="box-1">
-        </div>    
-        <div class="box-2">
-            
-             
-        </div>
-    </main>
+    <div class="welcome" >
+        <p>Training OnPoint</p>
+    </div>
 
 
 <!--about section ------------------------------------------>
