--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               nesciunt sapiente placeat a, cupiditate assumenda. Magni
               praesentium id sint exercitationem molestias dignissimos eveniet.
             </p>
-            <button><a href="#">Read more</a></button>
+            <button class="about-btn"><a href="#">Read more</a></button>
           </div>
         </div>
       </div>
