--- a/index.html
+++ b/index.html
@@ -99,7 +99,9 @@
               Effective training programs to make you feel and look good about
               yourself
             </p>
-            <a href="#" class="service-button">Sign Up</a>
+            <button class="service-btn">
+              <a href="#">Sign Up</a>
+            </button>
           </div>
         </div>
         <div class="service-card bodyweight">
@@ -109,7 +111,9 @@
               Effective training programs to make you feel and look good about
               yourself
             </p>
-            <a href="#" class="service-button">Sign Up</a>
+            <button class="service-btn">
+              <a href="#">Sign Up</a>
+            </button>
           </div>
         </div>
         <div class="service-card nutrition">
@@ -119,7 +123,9 @@
               Effective training programs to make you feel and look good about
               yourself
             </p>
-            <a href="#" class="service-button">Sign Up</a>
+            <button class="service-btn">
+              <a href="#">Sign Up</a>
+            </button>
           </div>
         </div>
       </div>
