--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
     <h2 class="section-title" id="about">About</h2>
 
-    <section class="about">
+    <section class="about-section">
       <div class="about-container">
         <div class="about-left"></div>
         <div class="about-right">
