shadows to program cards

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
     <!--Services ------------------------------------------>
 
-    <h2 class="section-title" id="services">Services</h2>
+    <h2 class="section-title" id="services">Programs</h2>
     <section class="service-section">
       <div class="service-container">
         <div class="service-card kettlebell">
