--- a/index.html
+++ b/index.html
@@ -31,37 +31,38 @@
     <!-- Main Menu------------------------------------------------->
 
     <header>
-      <nav>
-        <ul class="nav-bar">
-          <li class="logo">Damian Roiz</li>
-          <li class="items"><a href="index.html">Home</a></li>
-          <li class="items"><a href="index.html#about">About</a></li>
-          <li class="items"><a href="index.html#services">Services</a></li>
-          <li class="items">
-            <a href="https://damianroiz-blog.netlify.app/">Blog</a>
-          </li>
-          <li class="items"><a href="#newsletter">Newsletter</a></li>
-          <li class="btn">
-            <a href="#"><i class="fas fa-bars"></i></a>
-          </li>
-        </ul>
+      <nav class="navbar">
+        <div class="logo">
+          <span>Damian Roiz</span>
+        </div>
+        <div class="toggle-button">
+          <a href="#">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+          </a>
+        </div>
+        <div class="navbar-items">
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html#about">About</a></li>
+            <li><a href="index.html#services">Services</a></li>
+            <li>
+              <a href="https://damianroiz-blog.netlify.app/">Blog</a>
+            </li>
+            <li class="lastnavitem"><a href="#newsletter">Newsletter</a></li>
+          </ul>
+        </div>
       </nav>
-
-      <script>
-        $(document).ready(function () {
-          $(".btn").click(function () {
-            $(".items").toggleClass("show");
-            $("ul li").toggleClass("hide");
-          });
-        });
-      </script>
     </header>
 
     <!--mission statement------------------------------------------>
 
-    <div class="welcome">
-      <p>#OnPoint</p>
-    </div>
+    <section class="welcome">
+      <div>
+        <p>#OnPoint</p>
+      </div>
+    </section>
 
     <!--about section ------------------------------------------>
 
@@ -205,5 +206,6 @@
         </p>
       </div>
     </footer>
+    <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
